[package]
name = "post_gen"
version = "0.1.0"
authors = ["Chris Bailey <chris@ghostly.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "post_gen"
test = false
bench = true 

[dependencies]
chrono = "0.4.19"
dialoguer = "0.7.1"
str_slug = "0.1.3"
structopt = "0.3.21"
